--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=movie-recommender-system
 logging.level.root=DEBUG
 server.port=8181
+recommender.implementation.favoriteMovie=Finding Dory
